<resources>
    <string name="app_name">Deel je maaltijd</string>
    <string name="setting">Optie</string>
    <string name="inspectieTag">Inspecteur</string>
    <string name="titel">titel</string>
    <string name="datum">datum</string>
    <string name="stad">stad</string>
    <string name="prijs">prijs</string>
    <string name="loading_word">Wachten...</string>
    <string name="Details_Realisatie">Details gerealiseerd</string>
    <string name="detail_maaltijd">hello</string>
    <string name="opslaan">onSaveInstanceState</string>
    <string name="selectie_optie">\"Opties geselecteerd. Id = \"</string>
    <string name="wifiStatus">\"Wifi is \"</string>
    <string name="proost">\"Proost: \"</string>
    <string name="toolbar_creatie">Top bar gecreeert</string>
    <string name="Wifi_controle">Checks the wifi</string>
    <string name="Maaltijden">\"Aantal maaltijden: \"</string>
    <string name="emailadress">Emailadres</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="registreren">Registreren</string>
    <string name="foutWachtwoord">Wacht is incorrect</string>
    <string name="voornaam">Voornaam</string>
    <string name="telefoonnummer">Telefoonnummer</string>
    <string name="straat">Straat</string>
    <string name="aanmelden">Aanmelden</string>
    <string name="UIassignment">UI velden toegewezen</string>
    <string name="UIinvulling">UI velden ingevuld</string>
    <string name="toast">Toast</string>
    <string name="achternaam">Achternaam</string>
    <string name="plaats">Plaats</string>
    <string name="title">Titel</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="geserveerd_op">Geserveerd op:</string>
    <string name="allergenen">Allergenen:</string>
    <string name="vega">Vegetarisch</string>
    <string name="vegan">Veganistisch</string>
    <string name="vega_n_Optie">optie</string>
    <string name="isVegan">Minimaal veganistisch</string>
    <string name="isVega">Minimaal vegetarisch</string>
    <string name="logIn">Log in</string>
    <string name="filter">Filter</string>
</resources>