<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/afbeelding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titel" />


        <TextView
            android:id="@+id/titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/titel"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/datum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/afbeelding"
            android:layout_alignParentStart="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/datum"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/Stad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datum"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/stad"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/prijs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datum"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/Stad"
            android:text="@string/prijs"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>